# make_sample

./: .gitignore  _android_gcc.txt  _msvc.txt
cmake/: .gitignore  _note.txt
cmake-3rdparth/: CMakeLists.txt
cmake-3rdparth/test/: main.cpp
cmake-crc/: _note.txt
cmake-library/src/: main.cpp
cmake-sample/src/: main.cpp
cmake-win32/: CMakeLists.txt  main-crc.cpp
cmake/3rdparth/: _note.txt
cmake/cmake-3rdparth/: build-cmake.cmd
cmake/cmake-library/: CMakeLists.txt  _note.txt
cmake/cmake-mfc/: CMakeLists.txt  build-cmake.cmd  main.cpp
cmake/cmake-mfc/src/: main.cpp
cmake/cmake-win32/src/: main.cpp
cmake/mfc/: CMakeLists.txt
cmake/mfc/src/: main.cpp
cmake/sample/: CMakeLists.txt
cmake/sample/src/: main.cpp
libnet_build_ios/: control  make.sh
make.sh/: make-macios.sh
make.sh/libnet_ios/: README.md  deb.sh  note.txt
makefile/: .gitignore  Makefile  _note.txt  make_ffmpeg.sh  make_file.sh  make_x264.sh  makefile  makefile.arm64  makefile.armv7  note.txt
makefile-dylib/: makefile  note.txt
makefile-dylib-ios/: makefile-iosgcc
makefile-dylib-ios/lib/: base.c
makefile-dylib/src/: main.c
makefile/_mac_ios/: makefile-macios
makefile/sample/: makefile
makefile/sample-ios/: makefile-iosclang  makefile-macios-objc
makefile/src/: main.c
